--- a/.github/workflows/plugin-build.yml
+++ b/.github/workflows/plugin-build.yml
@@ -1,21 +1,31 @@
 name:  Howler Plugin
 
-on: push
-
+on: 
+  push:
+      branches-ignore:
+      - 'master'
+  pull_request:
+    branches: [ master ]
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        distribution: [ 'zulu', 'temurin' ]
+        java: [ '11', '17' ]
+        os: [ 'ubuntu-latest', 'macos-latest', 'windows-latest' ]
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 8
+    - name: Set up JDK ${{ matrix.java }}
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
-        distribution: 'temurin'
+        java-version: '${{ matrix.java }}'
+        distribution: '${{ matrix.distribution }}'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml -DjavaVersion=${{ matrix.java }}
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml -DjavaVersion=${{ matrix.java }}
+      
