--- a/.github/workflows/plugin-build.yml
+++ b/.github/workflows/plugin-build.yml
@@ -26,3 +26,6 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml -Djava_version=${{ matrix.java }}
+    - name: Test with Maven
+      run: mvn -B test --file pom.xml -Djava_version=${{ matrix.java }}
+      
